# parameter_golf

./: .gitignore  README.md  pyproject.toml
configs/: base.yaml
src/: compress.py  data.py  model.py  train.py
src/chineseroom.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
